# Valkyrie

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
valkyrie/core/: conf.py  exceptions.py  scanner.py  types.py
valkyrie/core/formatters/: __init__.py  base.py  html.py  json.py  sarif.py
valkyrie/plugins/: __init__.py  secrets.py
valkyrie/plugins/iamx/: __init__.py  conf.py
valkyrie/plugins/secrets/: __init__.py  conf.py
valkyrie/plugins/vulnera/: __init__.py  conf.py  parser.py
valkyrie/utils/: logger.py
