[project]
name = "valkyrie"
version = "0.1.0"
description = "The guardian of your Pull Requests. She decides what gets to merge."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "AllDotPy", email = "hello@alldotpy.com" }]
maintainers = [{ name = "#Einswilli", email = "einswilligoeh@email.com" }]
requires-python = ">=3.10"
keywords = [
    "valkyrie", "CI/CD", "security scaner", "guardian",
    "pipelines", "iam", "secrets"
]
dependencies = [
    "pydantic>=2.11.9",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "yamllib>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "black", 
    "mypy",
    "twine",
    "uv",
    "build",
    "pytest>=8.4.0", 
    "mkdocs>=1.6.1",
    "setuptools>=80.8.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]

[project.urls]
# Homepage = "https://alldotpy.github.io/FletX"
Repository = "https://github.com/AllDotPy/Valkyrie"
# Documentation = "https://alldotpy.github.io/FletX"
Tracker = "https://github.com/AllDotPy/Valkyrie/issues"

[tool.setuptools]
packages = ["valkyrie"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
